# wsPrism

./: .gitignore  Cargo.toml  README.md  Readme(EN).md  Readme.md  wsprism.yaml
.github/workflows/: docs.yml
crates/wsprism/: Cargo.toml
crates/wsprism-core/: Cargo.toml
crates/wsprism-core/src/: error.rs  lib.rs
crates/wsprism-core/src/protocol/: hot.rs  mod.rs  text.rs
crates/wsprism-core/tests/: hot_vectors.rs  text_vectors.rs  vector_loader.rs
crates/wsprism-core/tests/vectors/: envelope_full.json  envelope_min.json  hot_bad_version.json  hot_move.json  hot_payload_ok.json  hot_seq_flag_missing_u32.json  hot_too_short.json
crates/wsprism-gateway/: Cargo.toml
crates/wsprism-gateway/src/: app_state.rs  lib.rs  main.rs  router.rs
crates/wsprism-gateway/src/config/: mod.rs  schema.rs
crates/wsprism-gateway/src/context/: mod.rs  tenant.rs
crates/wsprism-gateway/src/dispatch/: dispatcher.rs  mod.rs
crates/wsprism-gateway/src/obs/: metrics.rs  mod.rs
crates/wsprism-gateway/src/ops/: mod.rs
crates/wsprism-gateway/src/policy/: allowlist.rs  engine.rs  mod.rs
crates/wsprism-gateway/src/realtime/: mod.rs  types.rs
crates/wsprism-gateway/src/realtime/core/: mod.rs  presence.rs  realtime.rs  session_registry.rs
crates/wsprism-gateway/src/services/: chat.rs  echo_binary.rs  mod.rs
crates/wsprism-gateway/src/transport/: codec.rs  handshake.rs  mod.rs  ws.rs
crates/wsprism-gateway/tests/: config_strict.rs
crates/wsprism/src/: lib.rs
docs/: .gitignore  CONFIG.md  PLUGIN_ABI.md  PROTOCOL.md  book.toml
docs/src/: SUMMARY.md
docs/src/architecture/: dual_lane.md
docs/src/guide/: configuration.md
docs/src/intro/: getting_started.md  introduction.md  philosophy.md
legacy/: state.rs
legacy/api/: mod.rs  ws.rs
legacy/infra/: mod.rs  ticket_store.rs
legacy/realtime/: mod.rs
legacy/realtime/core/: api.rs  mod.rs  presence.rs  session.rs
legacy/realtime/protocol/: envelope.rs  inbound.rs  mod.rs
legacy/realtime/services/: mod.rs
legacy/realtime/services/chat/: mod.rs  service.rs
legacy/realtime/services/gameplay/: mod.rs
legacy/transport/ws/: codec.rs  handler.rs
src/: error.rs  lib.rs  main.rs
src/realtime/core/: dispatcher.rs
src/realtime/protocol/: qos.rs  types.rs
src/realtime/services/gameplay/: service.rs
