[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
# Runtime/Logging
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization/Error
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_yaml = "0.9"
thiserror = "1"

# Binary
bytes = "1"
base64 = "0.21"
hex = "0.4"

# Internal Crates
wsprism-core = { path = "crates/wsprism-core" }
