[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
# runtime / logging
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# serialization / config / errors
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_yaml = "0.9"
thiserror = "1"

# binary utils
bytes = "1"

# internal crates
wsprism-core = { path = "crates/wsprism-core" }

axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
