[package]
name = "wsprism-core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
